--- a/public/poll.html
+++ b/public/poll.html
@@ -7,10 +7,31 @@
     <title></title>
 </head>
 <body>
-    <div class="votes">
-        <canvas id="poll" width="1" height="1"></canvas>
+  <style>
+    .share {
+      width: 50%;
+    }
+  </style>
+
+  <div class="opts jumbotron"></div>
+
+  <h3 style="padding-left: 40px;">Results</h3>
+
+  <div class="votes">
+    <canvas id="poll" width="1" height="1"></canvas>
+  </div>
+
+  <center>
+    <div class="share-with-friends">
+      <h3>Share the link with your friends!</h3>
+      <form class="share">
+        <div class="input-group value">
+        </div>
+      </form>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
-    <script src="/static/js/poll.js"></script>
+  </center>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
+  <script src="/static/js/poll.js"></script>
 </body>
 </html>
