--- a/public/poll.html
+++ b/public/poll.html
@@ -11,7 +11,26 @@
     .share {
       width: 50%;
     }
+
+    body {
+      margin-bottom: 100px;
+    }
+
   </style>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="/">
+        <img src="/static/images/logo.svg" width="35px" alt="">
+        Raw Poll
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+        </ul>
+    </div>
+  </nav>
 
   <div class="opts jumbotron"></div>
 
