--- a/public/poll.html
+++ b/public/poll.html
@@ -28,6 +28,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Home</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/new/">Create Poll</a>
+          </li>
         </ul>
     </div>
   </nav>
