--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
             var xhr = new XMLHttpRequest();
 
-            xhr.open("POST", window.location.hostname + "/api/vote/", true);
+            xhr.open("POST", "/api/vote/", true);
             xhr.setRequestHeader('Content-Type', 'application/json');
 
             xhr.send(JSON.stringify(obj));
