--- a/public/create.html
+++ b/public/create.html
@@ -13,9 +13,32 @@
         }
     </style>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">
+            <img src="/static/images/logo.svg" width="35px" alt="">
+            Raw Poll
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="jumbotron">
         <center>
             <form>
+                <div class="form-group">
+                    <label for="question">Question</label>
+                    <input class="form-control question" placeholder="Question">
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input class="form-control description" placeholder="Description">
+                </div>
+                <label for="opts">Options</label>
                 <div class="options-all"></div>
                 <button class="btn btn-primary submit">Submit</button>
             </form>
@@ -55,10 +78,46 @@
         }
 
         function removeOption(element) {
-            if (element.value == "") {
+            if (element.value == "" && element.parentNode.parentNode.childNodes.length > 2) {
                 element.parentNode.remove();
             }
         }
+
+        const submitPoll = document.querySelector(".submit");
+
+        submitPoll.addEventListener("click", (event) => {
+            event.preventDefault()
+
+            var values = []
+
+            const description = document.querySelector(".description").value;
+            const question = document.querySelector(".question").value;
+            
+            optionsDiv.childNodes.forEach(element => {
+                let val = element.children[0].value.trim();
+
+                if (val !== "") {
+                    values.push(val);
+                }
+            })
+
+            const data = {
+                question: question,
+                description: description,
+                options: values
+            }
+
+            var xhr = new XMLHttpRequest();
+
+            xhr.open("POST", "/api/poll/", true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+
+            xhr.send(JSON.stringify(data));
+
+            xhr.onload = () => {
+                window.location.replace("/poll/" + JSON.parse(xhr.responseText).id);
+            }
+        });
     </script>
 </body>
 </html>
