--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="http://rawpoll.herokuapp.com/static/images/logo.png">
+    <meta property="og:description" content="Raw poll makes it easy to create new polls in seconds and free and open source!">
+    <meta property="og:title" content="Raw Poll">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Raw Poll</title>
 </head>
 <body>
-    <button onClick="test()">Test</button>
-
-    <script>
-        function test() {
-            const obj = {
-                id: "5fa0c0ff00f486fe0018c38a",
-                option: "Vim"
-            }
-
-            const body = document.querySelector("body");
-
-            var xhr = new XMLHttpRequest();
-
-            xhr.open("POST", "/api/vote/", true);
-            xhr.setRequestHeader('Content-Type', 'application/json');
-
-            xhr.send(JSON.stringify(obj));
-
-            xhr.onload = () => {
-                body.innerHTML += xhr.responseText;
-            }
-        }
-    </script>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">
+            <img src="/static/images/logo.svg" width="35px" alt="">
+            Raw Poll
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="/new/">Create Poll</a>
+              </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="jumbotron">
+        <center>
+            <h1 class="display-4">Create a Poll in Seconds!</h1>
+            <p class="lead">Raw poll makes it easy to create new polls in seconds and free and open source!</p>
+        </center>
+    </div>
+    <div>
+        <center>
+            <h3>What to do?</h3>
+            <a class="nav-link" href="/new/">Create a Poll!</a>
+        </center>
+    </div>
 </body>
 </html>
