Back to dino mongo was useless

--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,8 @@
             <a class="nav-link" href="/new/">Create a Poll!</a>
         </center>
     </div>
+
+    <script>
+    </script>
 </body>
 </html>
