Update logo location

--- a/public/vote.html
+++ b/public/vote.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="/">
-            <img src="/images/logo.svg" width="35px" alt="">
+            <img src="/static/images/logo.svg" width="35px" alt="">
             Raw Poll
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
