--- a/public/poll.html
+++ b/public/poll.html
@@ -21,18 +21,45 @@
         </div>
     </nav>
 
+    <div class="jumbotron">
+        <center>
+            <div class="title display-4"></div>
+        </center>
+        <div class="description lead"></div>
+        <br>
+        <ul class="list-group options"></ul>
+    </div>
+
     <script>
         let id = window.location.pathname.split("/");
 
         id = id[id.length - 1]
 
-        const body = document.querySelector("body");
+        const title = document.querySelector(".title");
+        const description = document.querySelector(".description");
+        const options = document.querySelector(".options");
 
         fetch("/api/poll/" + id)
             .then(
                 response => {
                     response.json().then(function(data) {
-                        body.innerHTML += JSON.stringify(data);
+
+
+                        title.innerHTML = data.question;
+                        description.innerHTML = data.description;
+
+                        Object.entries(data.options).forEach((opt) => {
+                            const [key, value] = opt;
+
+                            options.innerHTML += `
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                ${key}
+                                <span class="badge badge-primary badge-pill">${value}</span>
+                            </li>
+                            `;
+                        })
+
+                        paintChart();
                     }
                 )
             });
