--- a/public/vote.html
+++ b/public/vote.html
@@ -65,82 +65,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <script>
-        let id = window.location.pathname.split("/");
-
-        id = id[id.length - 1]
-
-        const opts = document.querySelector(".opts");
-        const title = document.querySelector(".title");
-        const description = document.querySelector(".description");
-
-        fetch("/api/poll/" + id)
-            .then(
-                response => {
-                    response.json().then(data => {
-                        title.innerHTML = data.question;
-                        description.innerHTML = "<strong>" + data.description + "</strong>";
-
-                        Object.entries(data.options).forEach(element => {
-                            const [key, value] = element;
-                            
-                            opts.innerHTML += `
-                            <input type="radio" name="choice" value="${key}" style="margin-right: 5px" >${key}
-                            <br>
-                            `
-                        })
-                    });
-                }
-            );
-
-            const submitOpt = document.querySelector(".submit");
-            const resultsButton = document.querySelector(".results");
-
-            resultsButton.addEventListener("click", (event) => {
-                event.preventDefault();
-
-                window.location.replace(window.location.pathname.replace("vote", "poll"));
-            })
-
-            submitOpt.addEventListener("click", (event) => {
-                event.preventDefault();
-
-                const rbs = document.querySelectorAll('input[name="choice"]');
-                let selectedValue;
-
-                for (const rb of rbs) {
-                    if (rb.checked) {
-                        selectedValue = rb.value;
-                        break;
-                    }
-                }
-                
-                const data = {
-                    id: id,
-                    option: selectedValue
-                }
-
-                var xhr = new XMLHttpRequest();
-
-                xhr.open("POST", "/api/vote/", true);
-                xhr.setRequestHeader('Content-Type', 'application/json');
-
-                xhr.send(JSON.stringify(data));
-
-                xhr.onload = () => {
-                    const body = document.querySelector("body");
-                    const json = JSON.parse(xhr.responseText);
-
-                    if (json.error != null) {
-                        body.innerHTML += `
-                        <div class="alert alert-danger" role="alert">
-                            <h4 class="alert-heading">Error!</h4>
-                            <hr>
-                            ${json.error}
-                        </div>`;
-                    }
-                }
-            });
-    </script>
+    <script src="/static/javascript/vote.js"></script>
 </body>
 </html>
